--- a/css/MonthPicker.css
+++ b/css/MonthPicker.css
@@ -17,13 +17,14 @@ http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt.
 */
 
 .month-picker {
-    width: 200px;
+    width: 300px;
     display: none;
     position: absolute;
     z-index: 9999;
 }
 .month-year-input {
-    width: 60px;
+    width: 0;
+    border: none;
 }
 .month-picker .year-container-all {
     cursor: pointer;
@@ -85,4 +86,17 @@ http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt.
 }
 .month-picker-disabled {
     background-color: #e1e1e1;
+}
+
+.button-1, .button-2, .button-3, .button-4, .button-5, .button-6, .button-7,
+.button-8, .button-9, .button-10, .button-11, .button-12 {
+    width: 80px;
+}
+
+.year-chooser {
+    margin-bottom: 2px;
+}
+
+.month-picker-hidden {
+    opacity: 1;
 }
