--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 .top-menu {
     height: 100px;
 }
+
+#tabs {
+    height: 42px;
+}
+
+.closeTab {
+    margin: -9px -10px 0 10px;
+    outline: none;
+}
+
+#tabs li a {
+    outline: none;
+}
